manifests/base/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: website
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - name: hugo
        image: hugo
        imagePullPolicy: Always
        ports:
        - containerPort: 80
