manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
  labels:
    app: website
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: website
  type: ClusterIP
